# tap-marvel

./: .gitignore  LICENSE  README.md  pyproject.toml
tap_marvel/: client.py  streams.py  tap.py
tap_marvel/tests/: __init__.py  test_core.py
