[tool.poetry]
name = "tap-marvel"
version = "0.0.1"
description = "`tap-marvel` is a Singer tap for Marvel, built with the Meltano Singer SDK."
authors = ["Josh Devlin"]
keywords = [
    "ELT",
    "Marvel",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
requests = "^2.28.1"
singer-sdk = { version="^0.17.0"}
fs-s3fs = { version = "^1.1.1", optional = true}

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_marvel"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-marvel = 'tap_marvel.tap:TapMarvel.cli'
